<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="slogan">Love texting again.</string>
    <string name="unknown_number">Unknown Number</string>
    <string name="popup_photo_CD">Photo</string>
    <string name="loading">Loading…</string>
    <string name="test">Test string</string>
    <string name="hint_contacts">Enter recipients</string>
    <string name="hint_search">Search something</string>
    <string name="hint_reply">Enter a message</string>
    <string name="hint_redeem">Enter code</string>
    <string name="hint_hex">Hex</string>
    <string name="new_message">New message</string>
    <string name="new_messages">new messages</string>
    <string name="failed_message">Message failed to send</string>
    <string name="failed_messages">messages failed to send</string>
    <string name="failed_messages_summary">Tap to view</string>
    <string name="quickcompose">QK Compose</string>
    <string name="quickcompose_detail">Click to send a message</string>
    <string name="welcome_start">Let\'s get started!</string>
    <string name="welcome_skip">SKIP</string>
    <string name="welcome_finish">FINISH</string>
    <string name="welcome_theme_title">Pick a color</string>
    <string name="welcome_theme_description">Any color.</string>
    <string name="welcome_night_description">Easy on the eyes.</string>
    <string name="welcome_night_hint">Toggle me</string>
    <string name="welcome_quickreply_title">QK Reply</string>
    <string name="welcome_quickreply_description">Reply to messages faster than ever.</string>
    <string name="welcome_quickreply_hint">Try it!</string>
    <string name="welcome_quickreply_message_1">Wow! Now wasn\'t that awesome? You can view your entire conversation at a glance. Tap outside the popup or press the checkmark to dismiss it.</string>
    <string name="welcome_quickreply_message_2">This is QK Reply. Now you can reply to messages from anywhere. Tap the expand button to see what happens next :)</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_show_all">Show all messages</string>
    <string name="menu_show_unread">Show unread messages</string>
    <string name="menu_open_thread">Open conversation</string>
    <string name="menu_forward">Forward message</string>
    <string name="menu_call">Call</string>
    <string name="menu_read">Mark as read</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_billing">Donate</string>
    <string name="menu_copy">Copy text</string>
    <string name="menu_changelog">"What's new"</string>
    <string name="menu_show_all_prefs">Show all</string>
    <string name="menu_show_fewer_prefs">Show fewer</string>
    <string name="details_title">Details</string>
    <string name="details_to">To</string>
    <string name="details_from">From</string>
    <string name="details_body">Body</string>
    <string name="details_date_sent">Date sent</string>
    <string name="details_date_received">Date received</string>
    <string name="rate_title">Like QKSMS?</string>
    <string name="rate_action">Rate</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_summary_appearance">Themes, fonts, colors, avatars, and more</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_summary_general">Delivery, message sending, formatting</string>
    <string name="pref_category_blocking">Message blocking</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_category_summary_notifications">Sounds, LED, privacy</string>
    <string name="pref_category_mms">MMS</string>
    <string name="pref_category_summary_mms">Configure MMS (APNs), max size, group messaging</string>
    <string name="pref_category_quickreply">QK Reply</string>
    <string name="pref_category_summary_quickreply">QK Reply, popup options</string>
    <string name="pref_category_quickcompose">QK Compose</string>
    <string name="pref_category_summary_quickcompose">QK Compose, starred contacts</string>
    <string name="pref_category_about">About</string>
    <string name="pref_category_summary_about">Version, changelog, authors, thanks</string>
    <string name="pref_theme">Theme color</string>
    <string name="pref_theme_summary_alt">Tap to change theme</string>
    <string name="pref_icon">Icon color</string>
    <string name="pref_icon_summary">Tap to change the QKSMS icon color</string>
    <string name="pref_status_tint">Tinted status bar</string>
    <string name="pref_navigation_tint">Tinted navigation bar</string>
    <string name="pref_background">Background color</string>
    <string name="pref_background_summary">Tap to change background color</string>
    <string name="pref_bubbles">Message bubbles</string>
    <string name="pref_bubbles_summary">Tap to change message bubble preferences</string>
    <string name="pref_night">Night mode</string>
    <string name="pref_night_summary">Save battery and reduce eye strain</string>
    <string name="pref_night_amoled">Pure black background</string>
    <string name="pref_night_amoled_summary">Save extra battery on devices with AMOLED displays</string>
    <string name="pref_bubble_style_new">Use new bubble style</string>
    <string name="pref_color_sent">Color sent messages</string>
    <string name="pref_color_sent_summary">Color the background bubbles for outgoing messages</string>
    <string name="pref_compose_favorites">Starred contacts</string>
    <string name="pref_compose_summary_favorites">Show your starred contacts in the QK Compose window, making them only a tap away</string>
    <string name="pref_prox_sensor_call">Proximity sensor</string>
    <string name="pref_prox_sensor_call_summary">While in a conversation, bring your phone to your ear to start a call</string>
    <string name="pref_delivery">Delivery confirmations</string>
    <string name="pref_delivery_summary">Confirm that messages were sent successfully</string>
    <string name="pref_delivery_toast">Show toast</string>
    <string name="pref_delivery_toast_summary">Show a short toast to indicate a message being delivered</string>
    <string name="pref_delivery_vibrate">Vibrate</string>
    <string name="pref_delivery_vibrate_summary">Vibrate on message delivery</string>
    <string name="pref_yappy">Yappy integration</string>
    <string name="pref_endlessjabber_summary">Enable full support for Yappy</string>
    <string name="pref_blocked_conversations">Blocked conversations</string>
    <string name="pref_blocked_conversations_summary">Long-press on a conversation and block to move to blocked inbox and stop notifications</string>
    <string name="pref_block_future">Block future messages</string>
    <string name="pref_block_future_summary">Add additional phone numbers to block</string>
    <string name="pref_should_i_answer">Should I Answer? Integration</string>
    <string name="pref_should_i_answer_summary">Automatically delete incoming messages from numbers which are blocked through Should I Answer?</string>
    <string name="pref_mobile_only">Mobile numbers</string>
    <string name="pref_mobile_only_summary">Only show mobile numbers in contact suggestions</string>
    <string name="pref_auto_emoji">Automatic emoji</string>
    <string name="pref_auto_emoji_summary">Replace text with image emoji</string>
    <string name="pref_enter_button">Enter button</string>
    <string name="pref_enter_button_summary">Tap to change keyboard enter button behavior</string>
    <string name="pref_compose_group">Group messaging</string>
    <string name="pref_compose_group_summary">When composing message to multiple people, send a group message instead of individual messages</string>
    <string name="pref_split">Split SMS</string>
    <string name="pref_split_summary">Split long messages into separate messages</string>
    <string name="pref_split_counter">Split counter</string>
    <string name="pref_split_counter_summary">Adds a counter to the front of each split message</string>
    <string name="pref_text">Text</string>
    <string name="pref_notifications">SMS notifications enabled</string>
    <string name="pref_led">Notification LED</string>
    <string name="pref_delayed">Delayed messaging</string>
    <string name="pref_delayed_summary">Wait before sending your messages, so you have a chance to review them</string>
    <string name="pref_delayed_duration">Delay length (seconds)</string>
    <string name="pref_delayed_duration_summary">Time to wait before sending your message</string>
    <string name="pref_qk_responses">QK Responses</string>
    <string name="pref_qk_responses_summary">Modify your preset responses to be used from your Android Wear device</string>
    <string name="pref_quickreply_enabled">QK Reply enabled</string>
    <string name="pref_quickreply_enabled_summary">Show QK Reply window whenever a new message is received</string>
    <string name="pref_tap_to_quit">Tap to dismiss</string>
    <string name="pref_tap_to_quit_summary">Tap anywhere outside of the window to close it</string>
    <string name="pref_strip_unicode">Strip unicode</string>
    <string name="pref_strip_unicode_summary">Swap characters that are not supported in full-length messages for GSM compatible characters</string>
    <string name="pref_about_version_title">QKSMS version</string>
    <string name="pref_about_authors_title">Authors</string>
    <string name="pref_about_authors_summary">Moez Bhatti</string>
    <string name="pref_changelog_summary">Tap to view changelog</string>
    <string name="pref_about_thanks_title">Thank you</string>
    <string name="pref_about_thanks_summary">Tap to view open-source contributors</string>
    <string name="pref_donate_title">Donate</string>
    <string name="pref_donate_summary">QKSMS is free. Help support us by donating!</string>
    <string name="pref_about_gplus_title">Google+</string>
    <string name="pref_about_gplus_summary">Join the QKSMS Beta Testing community on Google+</string>
    <string name="pref_about_github_title">GitHub</string>
    <string name="pref_about_github_summary">QKSMS is open source. Contribute and report issues on GitHub</string>
    <string name="pref_about_crowdin_title">Crowdin</string>
    <string name="pref_about_crowdin_summary">Join the QKSMS translation project on Crowdin</string>
    <string name="pref_subcat_categories">Categories</string>
    <string name="title_changelog">Changelog</string>
    <string name="delete_conversation">Delete conversations</string>
    <string name="menu_delete_failed">Delete failed messages</string>
    <string name="more">More</string>
    <string name="menu_block_conversations">Block conversations</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_notification_settings">Conversation settings</string>
    <string name="menu_view_details">View details</string>
    <string name="menu_mark_read">Mark read</string>
    <string name="menu_done">Done</string>
    <string name="pref_markdown_enabled">Text formatting</string>
    <string name="pref_markdown_enabled_summary">Use markdown syntax to get bold, underline, and italics in your messages</string>
    <string name="pref_block_pattern">Patterns (Advanced!)</string>
    <string name="pref_block_pattern_summary">Add more regex patterns to blacklist. Follows java regex rules. Click on an item to remove (advanced users only!)</string>
    <string name="pref_block_word">Blacklist Words (Safe)</string>
    <string name="pref_block_word_summary">Add more words to blacklist. Click on an item to remove.</string>
    <string name="pref_block_skip_contact">Never block contacts</string>
    <string name="pref_block_skip_contact_summary">Never block messages when they are received from known contacts</string>
</resources>