<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_category_about">
        <Preference
            android:key="pref_key_version"
            android:layout="@layout/list_item_preference"
            android:title="@string/pref_about_version_title" />
        <Preference
            android:key="pref_key_changelog"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_changelog_summary"
            android:title="@string/title_changelog" />
        <Preference
            android:key="pref_key_authors"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_about_authors_summary"
            android:title="@string/pref_about_authors_title" />
        <Preference
            android:key="pref_key_thanks"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_about_thanks_summary"
            android:title="@string/pref_about_thanks_title" />
        <Preference
            android:key="pref_key_google_plus"
            android:layout="@layout/list_item_preference"
            android:title="@string/pref_about_gplus_title"
            android:summary="@string/pref_about_gplus_summary" />
        <Preference
            android:key="pref_key_github"
            android:layout="@layout/list_item_preference"
            android:title="@string/pref_about_github_title"
            android:summary="@string/pref_about_github_summary" />
        <Preference
            android:key="pref_key_crowdin"
            android:layout="@layout/list_item_preference"
            android:title="@string/pref_about_crowdin_title"
            android:summary="@string/pref_about_crowdin_summary" />
        <Preference
            android:icon="@drawable/ic_donate"
            android:key="pref_key_donate"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_donate_summary"
            android:title="@string/pref_donate_title" />
    </PreferenceCategory>
</PreferenceScreen>