<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:defaultValue="-16746133"
        android:key="pref_key_theme"
        android:layout="@layout/list_item_preference"
        android:summary="@string/pref_theme_summary_alt"
        android:title="@string/pref_theme" />
    <ListPreference
        android:defaultValue="light"
        android:entries="@array/background_titles"
        android:entryValues="@array/background_values"
        android:key="pref_key_background"
        android:layout="@layout/list_item_preference"
        android:summary="@string/pref_background_summary"
        android:title="@string/pref_background" />

    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_subcat_categories">
        <Preference
            android:icon="@drawable/ic_palette"
            android:key="pref_key_category_appearance"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_appearance"
            android:title="@string/pref_category_appearance" />
        <Preference
            android:icon="@drawable/ic_settings"
            android:key="pref_key_category_general"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_general"
            android:title="@string/pref_category_general" />
        <Preference
            android:icon="@drawable/ic_notifications"
            android:key="pref_key_category_notifications"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_notifications"
            android:title="@string/pref_category_notifications" />
        <Preference
            android:icon="@drawable/ic_photo"
            android:key="pref_key_category_mms"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_mms"
            android:title="@string/pref_category_mms" />
        <Preference
            android:icon="@drawable/ic_reply"
            android:key="pref_key_category_quickreply"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_quickreply"
            android:title="@string/pref_category_quickreply" />
        <Preference
            android:icon="@drawable/ic_compose"
            android:key="pref_key_category_quickcompose"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_quickcompose"
            android:title="@string/pref_category_quickcompose" />
        <Preference
            android:icon="@drawable/ic_info_fill"
            android:key="pref_key_category_about"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_about"
            android:title="@string/pref_category_about" />
        <Preference
            android:icon="@drawable/ic_donate"
            android:key="pref_key_donate"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_donate_summary"
            android:title="@string/pref_donate_title" />
    </PreferenceCategory>
</PreferenceScreen>