<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_delayed">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_delayed"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_delayed_summary"
            android:title="@string/pref_delayed"
            android:widgetLayout="@layout/view_checkbox" />
        <EditTextPreference
            android:defaultValue="3"
            android:dependency="pref_key_delayed"
            android:inputType="number"
            android:key="pref_key_delay_duration"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_delayed_duration_summary"
            android:title="@string/pref_delayed_duration" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_delivery">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_delivery"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_delivery_summary"
            android:title="@string/pref_delivery"
            android:widgetLayout="@layout/view_checkbox" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="pref_key_delivery"
            android:key="pref_key_delivery_toast"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_delivery_toast_summary"
            android:title="@string/pref_delivery_toast"
            android:widgetLayout="@layout/view_checkbox" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="pref_key_delivery"
            android:key="pref_key_delivery_vibrate"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_delivery_vibrate_summary"
            android:title="@string/pref_delivery_vibrate"
            android:widgetLayout="@layout/view_checkbox" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_text">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_auto_emoji"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_auto_emoji_summary"
            android:title="@string/pref_auto_emoji"
            android:widgetLayout="@layout/view_checkbox" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_markdown_enabled"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_markdown_enabled_summary"
            android:title="@string/pref_markdown_enabled"
            android:widgetLayout="@layout/view_checkbox" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_strip_unicode"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_strip_unicode_summary"
            android:title="@string/pref_strip_unicode"
            android:widgetLayout="@layout/view_checkbox" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_split"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_split_summary"
            android:title="@string/pref_split"
            android:widgetLayout="@layout/view_checkbox" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_split_counter"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_split_counter_summary"
            android:title="@string/pref_split_counter"
            android:widgetLayout="@layout/view_checkbox" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_category_general">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_blocked_enabled"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_blocked_conversations_summary"
            android:title="@string/pref_blocked_conversations"
            android:widgetLayout="@layout/view_checkbox" />
        <Preference
            android:defaultValue="false"
            android:dependency="pref_key_blocked_enabled"
            android:key="pref_key_block_future"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_block_future_summary"
            android:title="@string/pref_block_future" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_mobile_only"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_mobile_only_summary"
            android:title="@string/pref_mobile_only"
            android:widgetLayout="@layout/view_checkbox" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/enter_button_options"
            android:entryValues="@array/enter_button_values"
            android:key="pref_key_enter_button"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_enter_button_summary"
            android:title="@string/pref_enter_button" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_compose_favorites"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_compose_summary_favorites"
            android:title="@string/pref_compose_favorites"
            android:widgetLayout="@layout/view_checkbox" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_prox_sensor_calling"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_prox_sensor_call_summary"
            android:title="@string/pref_prox_sensor_call"
            android:widgetLayout="@layout/view_checkbox" />
        <Preference
            android:key="pref_key_qk_responses"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_qk_responses_summary"
            android:title="@string/pref_qk_responses" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_endlessjabber"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_endlessjabber_summary"
            android:title="@string/pref_yappy"
            android:widgetLayout="@layout/view_checkbox" />
    </PreferenceCategory>
</PreferenceScreen>