<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_category_appearance">
        <Preference
            android:defaultValue="-16746133"
            android:key="pref_key_theme"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_theme_summary_alt"
            android:title="@string/pref_theme" />
        <Preference
            android:defaultValue="-16746133"
            android:key="pref_key_icon"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_icon_summary"
            android:title="@string/pref_icon" />
        <ListPreference
            android:defaultValue="light"
            android:entries="@array/background_titles"
            android:entryValues="@array/background_values"
            android:key="pref_key_background"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_background_summary"
            android:title="@string/pref_background" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_category_general">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_markdown_enabled"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_markdown_enabled_summary"
            android:title="@string/pref_markdown_enabled"
            android:widgetLayout="@layout/view_switch" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_delivery"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_delivery_summary"
            android:title="@string/pref_delivery"
            android:widgetLayout="@layout/view_switch" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_compose_group"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_compose_group_summary"
            android:title="@string/pref_compose_group"
            android:widgetLayout="@layout/view_switch" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_category_notifications">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_notifications"
            android:layout="@layout/list_item_preference"
            android:title="@string/pref_notifications"
            android:widgetLayout="@layout/view_switch" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="pref_key_notifications"
            android:key="pref_key_led"
            android:layout="@layout/list_item_preference"
            android:title="@string/pref_led"
            android:widgetLayout="@layout/view_switch" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_category_about">
        <Preference
            android:key="pref_key_version"
            android:layout="@layout/list_item_preference"
            android:title="@string/pref_about_version_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/more">
        <Preference
            android:icon="@drawable/ic_unfold"
            android:key="pref_key_simple"
            android:layout="@layout/list_item_preference"
            android:title="@string/pref_show_all" />
        <Preference
            android:icon="@drawable/ic_donate"
            android:key="pref_key_donate"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_donate_summary"
            android:title="@string/pref_donate_title" />
    </PreferenceCategory>

</PreferenceScreen>