<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_category_blocking">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_blocked_enabled"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_blocked_conversations_summary"
            android:title="@string/pref_blocked_conversations"
            android:widgetLayout="@layout/view_switch" />
        <Preference
            android:defaultValue="false"
            android:dependency="pref_key_blocked_enabled"
            android:key="pref_key_block_future"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_block_future_summary"
            android:title="@string/pref_block_future" />
        <Preference
            android:defaultValue="false"
            android:dependency="pref_key_blocked_enabled"
            android:key="pref_key_block_pattern"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_block_pattern_summary"
            android:title="@string/pref_block_pattern" />
        <Preference
            android:defaultValue="false"
            android:dependency="pref_key_blocked_enabled"
            android:key="pref_key_block_word"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_block_word_summary"
            android:title="@string/pref_block_word" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_block_skip_contact"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_block_skip_contact_summary"
            android:title="@string/pref_block_skip_contact"
            android:widgetLayout="@layout/view_switch" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_should_i_answer"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_should_i_answer_summary"
            android:title="@string/pref_should_i_answer"
            android:widgetLayout="@layout/view_switch" />
    </PreferenceCategory>
</PreferenceScreen>