<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_call"
        android:icon="@drawable/ic_call"
        android:title="@string/menu_call"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/menu_notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_notification_settings"
        android:title="@string/menu_notification_settings" />

    <item
        android:id="@+id/menu_details"
        android:title="@string/menu_view_details" />

    <item
        android:id="@+id/menu_delete_conversation"
        android:title="@string/delete_conversation" />

    <item
        android:id="@+id/menu_donate"
        android:title="@string/menu_billing" />
</menu>