<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/menu_delete"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_mark_read"
        android:icon="@drawable/ic_accept"
        android:title="@string/menu_mark_read"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_block"
        android:title="@string/menu_block_conversations" />

    <item
        android:id="@+id/menu_delete_failed"
        android:title="@string/menu_delete_failed" />

    <item
        android:id="@+id/menu_done"
        android:title="@string/menu_done" />
</menu>
