<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_category_quickreply">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_quickreply_enabled"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_quickreply_enabled_summary"
            android:title="@string/pref_quickreply_enabled"
            android:widgetLayout="@layout/view_switch" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_quickreply_dismiss"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_tap_to_quit_summary"
            android:title="@string/pref_tap_to_quit"
            android:widgetLayout="@layout/view_switch" />
    </PreferenceCategory>
</PreferenceScreen>